--- a/Products/templates/products.html
+++ b/Products/templates/products.html
@@ -7,8 +7,9 @@
 	  
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
-	<!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script> -->
-  <script src="../static/js/bootstrap-4.4.1.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+  <script src="https://kit.fontawesome.com/0a05ea1ff3.js" crossorigin="anonymous"></script>
+  <!-- <script src="../static/js/bootstrap-4.4.1.js"></script> -->
 
   {% if n == "products" %}
     <script src = "../static/js/script_products.js"></script>
@@ -74,8 +75,8 @@
               </div>
             </li>
           </ul>
-          <form class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" id = "search-text">
+          <form class="form-inline my-2 my-lg-0" method = "post" action = "/search">
+            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" id = "search-text" name = "search">
             <button class="btn btn-outline-success my-2 my-sm-0" type="submit" onClick = "getSearch()">Search</button>
           </form>
         </div>
@@ -134,67 +135,71 @@
     <div class="container">
       <div class="row text-center">
         <div class="col-md-4 pb-1 pb-md-0">
-          <div class="card">
+          <div class="card" id = "box-1">
             <img class="card-img-top" src="#" alt="Card image cap" id = "img-1", loading = "lazy">
             <div class="card-body">
               <a href = "#" class = "card-title" id = "title-1">  </a>
               <p class="card-text" id = "price-1"></p>
-				<a href="#" class="btn btn-primary" id = "Cart-1">Add to Cart</a>
+				      <a href="#" class="btn btn-primary" id = "Cart-1"><i class="fas fa-shopping-cart"></i></a>
             </div>
           </div>
         </div>
         <div class="col-md-4 pb-1 pb-md-0">
-          <div class="card">
+          <div class="card" id = "box-2">
             <img class="card-img-top" src = "#" alt="Card image cap" id = "img-2">
             <div class="card-body">
               <a href = "#" class = "card-title" id = "title-2">  </a>
               <p class="card-text" id = "price-2"></p>
-              <a href="#" class="btn btn-primary" id = "Cart-2">Add to Cart</a>
+              <a href="#" class="btn btn-primary" id = "Cart-2"><i class="fas fa-shopping-cart"></i></a>
             </div>
           </div>
         </div>
         <div class="col-md-4 pb-1 pb-md-0">
-          <div class="card">
+          <div class="card" id = "box-3">
             <img class="card-img-top" src = "#" alt="Card image cap" id = "img-3">
             <div class="card-body">
               <a href = "#" class = "card-title" id = "title-3">  </a>
 				<p class="card-text" id = "price-3"></p>
-              <a href="#" class="btn btn-primary" id = "Cart-3">Add to Cart</a>
+              <a href="#" class="btn btn-primary" id = "Cart-3"><i class="fas fa-shopping-cart"></i></a>
             </div>
           </div>
         </div>
       </div>
       <div class="row text-center mt-4">
         <div class="col-md-4 pb-1 pb-md-0">
-          <div class="card">
+          <div class="card" id = "box-4">
             <img class="card-img-top" src = "#" alt="Card image cap" id = "img-4">
             <div class="card-body">
               <a href = "#" class = "card-title" id = "title-4">  </a>
 				<p class="card-text" id = "price-4"></p>
-              <a href="#" class="btn btn-primary" id = "Cart-4">Add to Cart</a>
+              <a href="#" class="btn btn-primary" id = "Cart-4"><i class="fas fa-shopping-cart"></i></a>
             </div>
           </div>
         </div>
+
+        {% if n == "products" or n == "women_clothing" or n == "electronics" %} 
         <div class="col-md-4 pb-1 pb-md-0">
-          <div class="card">
+          <div class="card" id = "box-5">
             <img class="card-img-top" src = "#" alt="Card image cap" id = "img-5">
             <div class="card-body">
               <a href = "#" class = "card-title" id = "title-5">  </a>
 				<p class="card-text" id = "price-5"></p>
-              <a href="#" class="btn btn-primary" id = "Cart-5">Add to Cart</a>
+              <a href="#" class="btn btn-primary" id = "Cart-5"><i class="fas fa-shopping-cart"></i></a>
             </div>
           </div>
         </div>
         <div class="col-md-4 pb-1 pb-md-0">
-          <div class="card">
+          <div class="card" id = "box-6">
             <img class="card-img-top" src = "#" alt="Card image cap" id = "img-6">
             <div class="card-body">
               <a href = "#" class = "card-title" id = "title-6">  </a>
-				<p class="card-text" id = "price-6"></p>
-              <a href="#" class="btn btn-primary" id = "Cart-6">Add to Cart</a>
+				      <p class="card-text" id = "price-6"></p>
+              <a href="#" class="btn btn-primary" id = "Cart-6"> <i class="fas fa-shopping-cart"></i></a>
+              <!-- <a href="#" class="btn btn-primary" id = "Cart-6">Add to Wishlist</a> -->
             </div>
           </div>
         </div>
+        {% endif %}
       </div>
     </div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
